FIX add Training bag
