# internal/delivery/docs/swagger.json
@@ -1627,7 +1627,7 @@
                     "201": {
                         "description": "Training successfully created",
                         "schema": {
-                            "$ref": "#/definitions/responses.CreatedIDIDsResponse"
+                            "$ref": "#/definitions/responses.CreatedIDResponse"
                         }
                     },
                     "400": {
@@ -3428,20 +3428,6 @@
                         1,
                         2
                     ]
-                }
-            }
-        },
-        "responses.CreatedIDIDsResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
                 }
             }
         },
